# bazel-system-libraries

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  Dockerfile  WORKSPACE  compile.sh  defs.bzl  main.cpp
